--- a/kubernetes/postgres-config.yaml
+++ b/kubernetes/postgres-config.yaml
@@ -5,5 +5,7 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: network_pg
+  POSTGRES_DB: inventory_pg
   POSTGRES_USER: postgresadmin
+  POSTGRES_PORT: "5432"
+  # POSTGRES_HOST: "10.1.211.243"
